--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.1.1
+version: 0.1.0
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -17,7 +17,7 @@ annotations:
       url: https://github.com/slydlake/helm-charts/tree/main/charts/wordpress
     - name: Official WordPress Repository
       url: https://github.com/docker-library/
-    - name: WordPress Prometheus Metrics plugin (SlyMetrics)
+    - name: "WordPress Prometheus Metrics plugin - SlyMetrics"
       url: https://github.com/slydlake/slymetrics
     - name: Apache Metrics container
       url: https://github.com/Lusitaniae/apache_exporter
@@ -25,8 +25,8 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: fixed
-      description: "fixed chart links"
+    - kind: added
+      description: "inital release"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wordpress
