--- a/.github/workflows/oci-release.yaml
+++ b/.github/workflows/oci-release.yaml
@@ -56,6 +56,15 @@ jobs:
           username: slybase
           password: ${{ steps.app-token.outputs.token }}
 
+      - name: Test registry access
+        run: |
+          echo "Testing registry access..."
+          echo "Username: slybase"
+          echo "Registry: ghcr.io"
+          # Test with docker to verify login
+          echo "${{ steps.app-token.outputs.token }}" | docker login ghcr.io -u slybase --password-stdin
+          echo "Docker login successful"
+
       - name: Check for chart changes
         id: chart-changes
         run: |
@@ -95,8 +104,20 @@ jobs:
           # Package the chart
           helm package "$chart_dir" --destination ./packages
           
+          echo "Pushing to OCI registry: oci://ghcr.io/slybase/helm-charts"
+          echo "Chart file: ./packages/${chart_name}-${chart_version}.tgz"
+          
           # Push to OCI registry and capture the digest
-          push_output=$(helm push "./packages/${chart_name}-${chart_version}.tgz" "oci://ghcr.io/slybase/helm-charts" 2>&1)
+          set -x  # Enable debug output
+          push_output=$(helm push "./packages/${chart_name}-${chart_version}.tgz" "oci://ghcr.io/slybase/helm-charts" 2>&1) || {
+            echo "Helm push failed with exit code $?"
+            echo "Push output:"
+            echo "$push_output"
+            exit 1
+          }
+          set +x  # Disable debug output
+          
+          echo "Push successful!"
           echo "$push_output"
           
           # Extract digest from the push output
@@ -104,6 +125,8 @@ jobs:
           
           if [ -z "$digest" ]; then
             echo "Failed to extract digest from push output"
+            echo "Full push output was:"
+            echo "$push_output"
             exit 1
           fi
           
