Clean up workflow and test with accepted GitHub App permissions

--- a/charts/wg-easy/Chart.yaml
+++ b/charts/wg-easy/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wg-easy
 description: Using the offical wg-easy/wg-easy image with almost any environment variables for K8s. Supporting Init Mode.
 type: application
-version: 0.1.8
+version: 0.1.9
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wg-easy/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -25,7 +25,7 @@ annotations:
       description: "signed the chart with cosign"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
-    - name: wireguard
+    - name: wg-easy
       image: ghcr.io/wg-easy/wg-easy:latest
 appVersion: "15"
 keywords:
