--- a/.github/workflows/oci-release.yaml
+++ b/.github/workflows/oci-release.yaml
@@ -4,7 +4,22 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Allow manual trigger
+  workflow_dispatch:
+    inputs:
+      chart:
+        description: 'Chart to test (wg-easy, wireguard, wordpress)'
+        required: true
+        default: 'wg-easy'
+        type: choice
+        options:
+        - wg-easy
+        - wireguard
+        - wordpress
+      force:
+        description: 'Force push even if version exists'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   oci-release:
@@ -17,10 +32,7 @@ jobs:
     
     strategy:
       matrix:
-        chart:
-          - wg-easy
-          - wireguard
-          - wordpress
+        chart: ${{ github.event_name == 'workflow_dispatch' && fromJson(format('["{0}"]', github.event.inputs.chart)) || fromJson('["wg-easy", "wireguard", "wordpress"]') }}
     
     steps:
       - name: Checkout
@@ -48,6 +60,29 @@ jobs:
           app-id: ${{ secrets.SLYBASE_APP_ID }}
           private-key: ${{ secrets.SLYBASE_APP_PRIVATE_KEY }}
           owner: SlyBase
+
+      - name: Debug authentication and registry access
+        run: |
+          echo "=== Debug Info ==="
+          echo "GitHub Actor: ${{ github.actor }}"
+          echo "Event: ${{ github.event_name }}"
+          echo "Target registry: ghcr.io/slybase/charts"
+          
+          echo "=== Test GitHub App token ==="
+          # Test if the token can access SlyBase org
+          if curl -s -f -H "Authorization: Bearer ${{ steps.app-token.outputs.token }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               https://api.github.com/orgs/SlyBase; then
+            echo "✅ GitHub App token can access SlyBase org"
+          else
+            echo "❌ GitHub App token cannot access SlyBase org"
+          fi
+          
+          echo "=== Test registry namespace ==="
+          # Try to list packages in the namespace
+          curl -s -H "Authorization: Bearer ${{ steps.app-token.outputs.token }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               "https://api.github.com/orgs/SlyBase/packages?package_type=container" | head -20
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
