--- a/.github/workflows/oci-release.yaml
+++ b/.github/workflows/oci-release.yaml
@@ -50,6 +50,14 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
 
+      - name: Install ORAS (for ArtifactHub metadata)
+        run: |
+          curl -LO "https://github.com/oras-project/oras/releases/download/v1.2.0/oras_1.2.0_linux_amd64.tar.gz"
+          mkdir -p oras-install/
+          tar -zxf oras_*.tar.gz -C oras-install/
+          sudo mv oras-install/oras /usr/local/bin/
+          rm -rf oras_*.tar.gz oras-install/
+
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3.7.0
         with:
@@ -216,3 +224,44 @@ jobs:
           echo ""
           echo "To verify signature:"
           echo "cosign verify $chart_ref --certificate-oidc-issuer https://token.actions.githubusercontent.com --certificate-identity https://github.com/${{ github.repository }}/.github/workflows/oci-release.yaml@refs/heads/main"
+
+  # Separate job for ArtifactHub metadata upload (only runs once per workflow)
+  upload-artifacthub-metadata:
+    name: Upload ArtifactHub Repository Metadata
+    permissions:
+      contents: read
+      packages: write
+    runs-on: ubuntu-latest
+    needs: oci-release
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install ORAS
+        run: |
+          curl -LO "https://github.com/oras-project/oras/releases/download/v1.2.0/oras_1.2.0_linux_amd64.tar.gz"
+          mkdir -p oras-install/
+          tar -zxf oras_*.tar.gz -C oras-install/
+          sudo mv oras-install/oras /usr/local/bin/
+          rm -rf oras_*.tar.gz oras-install/
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.SLYBASE_GHCR_TOKEN }}
+
+      - name: Upload ArtifactHub repository metadata
+        run: |
+          echo "Uploading ArtifactHub repository metadata..."
+          
+          oras push \
+            ghcr.io/slybase/charts:artifacthub.io \
+            --config /dev/null:application/vnd.cncf.artifacthub.config.v1+yaml \
+            artifacthub-repo.yml:application/vnd.cncf.artifacthub.repository-metadata.layer.v1.yaml
+          
+          echo "✅ ArtifactHub metadata uploaded successfully"
+          echo "Repository can now be added to ArtifactHub with URL: oci://ghcr.io/slybase/charts"
